--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -334,7 +334,7 @@ a.userActiveResponsive{
     width: 101px;
 }
 .smallScreenHeader #newHeaderWrapperMobileMenu {
-    margin-right: 7px;
+    // margin-right: 7px;
     width: 11%;
 }
 .smallScreenHeader.menuScrolling #newHeaderWrapperMobileMenu{
