--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5789,3 +5789,12 @@ section.block.block-facetapi:first-child h2 {
     padding: 5px 15px;
     width: 100px;
 }
+.searchContenTeacher{
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+.searchContenTeacher, .searchContenTeacher a, .searchContenCcourse {
+    color: #433a3a;
+    font-size: 15px;
+    line-height: 18px;   
+}
