--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5747,7 +5747,7 @@ section.block.block-facetapi:first-child h2 {
     z-index: 100;
 }
 #block-apachesolr-search-sort ul li a.active {
-    background: #fff none repeat scroll 0 0;
+    background: #fff url("/sites/all/themes/ukabbalah/images/dd_arrow.png") no-repeat scroll right center !important;
     border: 1px solid #ccc;
     // color: #433a3a !important;
     // display: inline-block;
