--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5551,6 +5551,7 @@ section.block.block-facetapi:first-child h2 {
     color: #433a3a;
     font-size: 26px;
     font-weight: bold;
+    min-width: 100%;
     text-transform: lowercase;
 }
 .block-facetapi > h2 {
