--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5763,19 +5763,19 @@ section.block.block-facetapi:first-child h2 {
 //     display: none;
 //     margin: 0;
 // }
-#block-apachesolr-search-sort .content {
-    display: inline-block;
-}
-#block-apachesolr-search-sort a {
-    background: #f1f0f0 none repeat scroll 0 0;
-    border-bottom: 1px solid #ccc;
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-    color: #433a3a;
-    display: inline-block;
-    padding: 5px 15px;
-    width: 100px;
-}
+// #block-apachesolr-search-sort .content {
+//     display: inline-block;
+// }
+// #block-apachesolr-search-sort a {
+//     background: #f1f0f0 none repeat scroll 0 0;
+//     border-bottom: 1px solid #ccc;
+//     border-left: 1px solid #ccc;
+//     border-right: 1px solid #ccc;
+//     color: #433a3a;
+//     display: inline-block;
+//     padding: 5px 15px;
+//     width: 100px;
+// }
 .searchContenTeacher{
     margin-bottom: 5px;
     margin-top: 15px;
