--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5740,8 +5740,14 @@ section.block.block-facetapi:first-child h2 {
 #block-apachesolr-search-sort{
     height: 56px;
 }
+#block-apachesolr-search-sort ul{
+   margin-top: -5px; 
+}
 #block-apachesolr-search-sort .content, #block-apachesolr-search-sort li{
     float: left;
+}
+#block-apachesolr-search-sort li img{
+    display: none;
 }
 #block-apachesolr-search-sort li a {
     color: #ccc;
