--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3156,11 +3156,11 @@ div.jp-audio{
     line-height: 17px;
     text-align: center;
     text-shadow: 0 -1px 0 #5E5D5D;
-    width: 39px; 
+    width: 60px; 
 }
 .Premium:before {
     color: #FFFFFF;
-    content: "Premium";
+    content: "PREMIUM";
     font-size: 11px;
     font-weight: bold;
 }
@@ -3177,7 +3177,7 @@ div.jp-audio{
 }
 .Basic:before {
     color: #FFFFFF;
-    content: "Basic";
+    content: "BASIC";
     font-size: 11px;
     font-weight: bold;
 }
