--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3164,6 +3164,23 @@ div.jp-audio{
     font-size: 11px;
     font-weight: bold;
 }
+.Premium.Plus{
+    background: #808080;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.1),0 1px 0 rgba(255,255,255,0.1) inset;
+    float: right;
+    height: 18px;
+    line-height: 17px;
+    text-align: center;
+    text-shadow: 0 -1px 0 #5E5D5D;
+    width: 60px; 
+}
+.Premium.Plus:before {
+    color: #FFFFFF;
+    content: "PREMIUM +";
+    font-size: 11px;
+    font-weight: bold;
+}
 .Basic{
     background: #808080;
     border-radius: 3px;
