--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3168,7 +3168,7 @@ div.jp-audio{
     width: 68px; 
 }
 .Premium.Plus:before {
-    content: "PREMIUM +";
+    content: "PREMIUM \271A";
 }
 .Basic{
     background: #808080;
