--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5673,7 +5673,7 @@ section.block.block-facetapi:first-child h2 {
     width: 18px;  
 }
 #searchFilterDetail label.element-invisible.checked{
-    background: #ccc;
+    background: url("http://cdn1.kabbalah.com/university/icons/v.png") no-repeat scroll center 1px;
 }
 #block-current-search-standard > h2 {
     font-size: 26px;
