removed image width and height from the css and script

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -788,10 +788,10 @@ ul.sidr-class-menu li.sidr-class-expanded > a:before{
   float: left;
   width: 980px;
 }
-.slidesImage img{
-    width:620px;
-    height:349px;   
-}
+// .slidesImage img{
+//     width:620px;
+//     height:349px;   
+// }
 .slidesInfoDesc {
   float: left;
   width: 360px;
@@ -1455,8 +1455,8 @@ footer>nav+div #block-block-2 a :hover {
 }
 .imagesCont img {
     float: left;
-    height: 170px;
-    width: 300px;
+    // height: 170px;
+    // width: 300px;
     z-index: -10;
 }
 .theDescCont{
@@ -3688,10 +3688,10 @@ body.page-search #block-system-main .views-row {
     margin-right: 13px;
     width: 300px;
 }
-.searchimage .theImage {
-    height: 169px;
-    width: 300px;
-}
+// .searchimage .theImage {
+//     height: 169px;
+//     width: 300px;
+// }
 .searchtext {
     // float: left;
     margin-bottom: 40px;
