--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2394,8 +2394,8 @@ h3 {
 //     width: 440px;
 // }
 #contentAuthorImages img{
-    width: 460px;
-    height: 259px;
+    // width: 460px;
+    // height: 259px;
     float: left;
     // margin-bottom: 9px;
 }
@@ -4188,10 +4188,10 @@ body.node-type-course .messages.error {
     border-top: 0 none;
     padding-top: 11px;
 }
-.authorImage img {
-    height: 70px;
-    width: 70px;
-}
+// .authorImage img {
+//     height: 70px;
+//     width: 70px;
+// }
 .authorImage a{
     color: #007ace !important;
     display: table-cell;
@@ -4205,9 +4205,9 @@ body.node-type-course .messages.error {
 }
 .authorImage img {
     float: left;
-    height: 70px;
+    // height: 70px;
     margin-right: 10px;
-    width: 70px;
+    // width: 70px;
 }
 .theCourseAuthor {
     margin-top: 25px;
