--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3259,8 +3259,8 @@ div.jp-audio{
 }
 .preVideoImg img{
     float: left;
-    height: 349px;
-    width: 620px;
+    // height: 349px;
+    // width: 620px;
 }
 .preVideoImg .videotitles{
     float: right;
@@ -4338,10 +4338,10 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
     margin-top:0!important;  
 }
 .wrapperPreviewLesson .preVideoImg img {
-    height: 564px !important;
+    // height: 564px !important;
     position: absolute;
     top: 0;
-    width: 100% !important;
+    // width: 100% !important;
 }
 .overImageOpacity {
     background: none repeat scroll 0 0 rgba(67, 58, 58, 0.36);
