--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5916,18 +5916,18 @@ section.block.block-facetapi:first-child h2 {
 
 // comments css
 
-header .active .publisher-nav-color::after {
+#disqus_thread .active .publisher-nav-color::after {
     background: #2691db none repeat scroll 0 0 !important;
 }
-#conversation #no-posts {
+#disqus_thread #conversation #no-posts {
     line-height: 20px!important;
 }
 
-header h3 .title.line-truncate {
+#disqus_thread .title.line-truncate {
     color: #433a3a!important;
     font-size: 14px!important;
 }
 
-li.discovery-post .line-truncate {
+#disqus_thread .discovery-post .line-truncate {
     font-size: 13px!important;
 }
