--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5917,7 +5917,7 @@ section.block.block-facetapi:first-child h2 {
 // comments css
 
 .commentingText {
-    background: rgba(0, 0, 0, 0) url("http://cdn1.kabbalah.com/university/icons/comment-box.png") no-repeat scroll 0 0;
+    background: url("http://cdn1.kabbalah.com/university/icons/comment-box.png") no-repeat;
     font-size: 14px;
     height: 64px;
     line-height: 20px;
