--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5924,3 +5924,6 @@ section.block.block-facetapi:first-child h2 {
     margin-bottom: 20px;
     padding: 17px 33px;
 }
+.commentingText > a {
+    color: #007ed3;
+}
