--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -53,7 +53,8 @@ p {
     line-height: 25px;
 }
 a {
-  color: $colorRed;
+  // color: $colorRed;
+  color: #007ACE; 
   text-decoration: none;
 }
 a:hover {
