--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5910,7 +5910,7 @@ section.block.block-facetapi:first-child h2 {
 #block-custom-search-blocks-2 input.apachesolr-autocomplete:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color:    #208fdc;
 }
-.not-logged-in.page-user form#user-login-form ul.item-list{
+.not-logged-in.page-user form#user-login-form .item-list ul{
     display: none;
 }
 // comments css
