--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5914,10 +5914,10 @@ section.block.block-facetapi:first-child h2 {
     display: none;
 }
 .not-logged-in.page-user #login_form > a {
-    text-align: center;
-    display: block;
-    margin-left: 53px;
     color: #a33a3a;
+    float: left;
+    margin-left: 215px;
+    margin-top: -86px;
 }
 // comments css
 
