--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5918,6 +5918,7 @@ section.block.block-facetapi:first-child h2 {
     float: left;
     margin-left: 215px;
     margin-top: -86px;
+    position: relative;
 }
 // comments css
 
