--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4206,9 +4206,9 @@ body.node-type-course .messages.error {
 }
 .authorImage img {
     float: left;
-    // height: 70px;
+    height: 70px;
     margin-right: 10px;
-    // width: 70px;
+    width: 70px;
 }
 .theCourseAuthor {
     margin-top: 25px;
