--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5959,3 +5959,8 @@ section.block.block-facetapi:first-child h2 {
 #playerbase {
     min-width: 940px;
 }
+video.jw-video {
+    height: 528.75px !important;
+    width: 940px !important;
+    transform: none!important;
+}
