--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5594,7 +5594,9 @@ section.block.block-facetapi:first-child h2 {
     font-weight: bold;
     letter-spacing: 0.4px;
     line-height: 20px;
+    margin-top: 30px;
     min-width: 100%;
+    padding-bottom: 10px;
     text-transform: uppercase;
 }
 .block-facetapi > h2 {
@@ -5613,12 +5615,15 @@ section.block.block-facetapi:first-child h2 {
     list-style: outside none none !important;
     margin-left: 0 !important;
 }
+.searchContentWrapper:first-child {
+    margin-top: 40px;
+}
 .searchContentWrapper {
-    // border-top: 1px dashed #b5b5b5;
+    border-bottom: 1px dashed #b5b5b5;
     float: left;
+    margin-bottom: 40px;
     padding-bottom: 20px;
-    // padding-top: 36px;
-    width: 100%;
+    width: 100%;00%;
 }
 .searchContenImage {
     float: left;
