--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5623,7 +5623,7 @@ section.block.block-facetapi:first-child h2 {
     float: left;
     margin-bottom: 40px;
     padding-bottom: 20px;
-    width: 100%;00%;
+    width: 100%;
 }
 .searchContenImage {
     float: left;
