--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5594,9 +5594,9 @@ section.block.block-facetapi:first-child h2 {
     font-weight: bold;
     letter-spacing: 0.4px;
     line-height: 20px;
-    margin-top: 30px;
+    margin-top: 37px;
     min-width: 100%;
-    padding-bottom: 10px;
+    padding-bottom: 11px;
     text-transform: uppercase;
 }
 .block-facetapi > h2 {
@@ -5707,8 +5707,9 @@ section.block.block-facetapi:first-child h2 {
     font-size: 16px;
     font-weight: bold;
     letter-spacing: 0.4px;
+    margin-bottom: 15px;
     margin-top: 0;
-    padding-top: 20px;
+    padding-top: 24px;
 }
 .current-search-item-active-items .item-list ul li {
     background: #f1f0f0 none repeat scroll 0 0;
