updated css for search page

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5648,6 +5648,10 @@ section.block.block-facetapi:first-child h2 {
     font-family: georgia;
     font-size: 18px;
     line-height: 27px;
+    margin-bottom: 9px;
+}
+.search-info {
+    margin-bottom: 5px !important;
 }
 .block.block-facetapi {
     border-bottom: 1px dashed #b5b5b5;
