--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5804,9 +5804,14 @@ section.block.block-facetapi:first-child h2 {
 .spelling-suggestions{
     background: #f1f0f0 none repeat scroll 0 0;
     float: left;
+    height: 20px;
     margin-top: 20px;
-    padding: 5px 30px;
+    padding: 15px 30px;
     width: 530px;
+    dl{
+        margin-bottom: 0;
+        margin-top: 0; 
+    }
     strong {
         color: #433a3a;
         font-family: proxiregular;
