--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5832,6 +5832,7 @@ section.block.block-facetapi:first-child h2 {
     color: #d44545;
     float: left;
     font-size: 17px;
+    margin-bottom: 0;
     margin-top: 30px;
     padding: 20px;
 }
