--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5836,6 +5836,9 @@ section.block.block-facetapi:first-child h2 {
     margin-top: 30px;
     padding: 20px;
 }
+#searchContentResult ul.pager li{
+    padding: 7px;
+}
 #searchContentResult ul.pager .pager-first.first{
     margin-left: 0;
     padding-left: 0;
