--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5831,10 +5831,16 @@ section.block.block-facetapi:first-child h2 {
     border: 1px solid #b5b5b5;
     color: #d44545;
     float: left;
-    font-size: 17px;
+    font-size: 15px;
     margin-bottom: 0;
     margin-top: 30px;
     padding: 20px;
+    li {
+        margin-bottom: 15px;
+    }
+    li:last-child{
+        margin-bottom: 0;
+    }
 }
 #searchContentResult ul.pager li{
     padding: 7px;
