--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4601,6 +4601,8 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
 }
 .buttonDownloadAudio {
     float: right;
+    position: relative;
+    z-index: 9998;
     //margin-top: 1px; 
 }
 .buttonDownloadAudio a{
