--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3271,7 +3271,7 @@ div.jp-audio{
     margin-top: 0;
 }
 #previewVideoStash{
-    background: #FFF;
+    background: url("http://cdn1.kabbalah.com/university/icons/preview1.jpg"); 
     height: 200px;
     position: absolute;
     width: 200px;
