--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3271,10 +3271,10 @@ div.jp-audio{
     margin-top: 0;
 }
 #previewVideoStash{
-    background: url("http://cdn1.kabbalah.com/university/icons/preview1.jpg"); 
-    height: 200px;
+    background: rgba(0, 0, 0, 0) url("http://cdn1.kabbalah.com/university/icons/preview1.jpg") no-repeat scroll 0 0;
+    height: 192px;
     position: absolute;
-    width: 200px;
+    width: 192px;
     z-index: 10;   
 }
 .preVideoImg #titleMultimedia,
